@@ -19,6 +19,12 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "cfile_test_get_version", "c
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "cfile_test_notify", "cfile_test_notify\cfile_test_notify.vcproj", "{699CAEE4-A02E-493B-A2F4-8FF4962DB831}"
+	ProjectSection(ProjectDependencies) = postProject
+		{8E3DC2B3-5FC5-43C0-BBB6-BEF3C8C3DD51} = {8E3DC2B3-5FC5-43C0-BBB6-BEF3C8C3DD51}
+		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
+	EndProjectSection
+EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "cfile_test_read", "cfile_test_read\cfile_test_read.vcproj", "{131C07A7-C5C3-4F25-8C70-9F8605431CED}"
 	ProjectSection(ProjectDependencies) = postProject
 		{8E3DC2B3-5FC5-43C0-BBB6-BEF3C8C3DD51} = {8E3DC2B3-5FC5-43C0-BBB6-BEF3C8C3DD51}
@@ -92,6 +98,10 @@ Global
 		{3497FEEC-0AEB-4B98-B6F4-5CA1FFE05297}.Release|Win32.Build.0 = Release|Win32
 		{3497FEEC-0AEB-4B98-B6F4-5CA1FFE05297}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
 		{3497FEEC-0AEB-4B98-B6F4-5CA1FFE05297}.VSDebug|Win32.Build.0 = VSDebug|Win32
+		{699CAEE4-A02E-493B-A2F4-8FF4962DB831}.Release|Win32.ActiveCfg = Release|Win32
+		{699CAEE4-A02E-493B-A2F4-8FF4962DB831}.Release|Win32.Build.0 = Release|Win32
+		{699CAEE4-A02E-493B-A2F4-8FF4962DB831}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
+		{699CAEE4-A02E-493B-A2F4-8FF4962DB831}.VSDebug|Win32.Build.0 = VSDebug|Win32
 		{131C07A7-C5C3-4F25-8C70-9F8605431CED}.Release|Win32.ActiveCfg = Release|Win32
 		{131C07A7-C5C3-4F25-8C70-9F8605431CED}.Release|Win32.Build.0 = Release|Win32
 		{131C07A7-C5C3-4F25-8C70-9F8605431CED}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
