@@ -1,5 +1,5 @@
 /*
- * Library error functions test program
+ * Library notification functions test program
  *
  * Copyright (C) 2008-2016, Joachim Metz <joachim.metz@gmail.com>
  *
@@ -30,78 +30,60 @@
 #include "cfile_test_macros.h"
 #include "cfile_test_unused.h"
 
-/* Tests the libcfile_error_free function
+/* Tests the libcfile_notify_set_verbose function
  * Returns 1 if successful or 0 if not
  */
-int cfile_test_error_free(
+int cfile_test_notify_set_verbose(
      void )
 {
 	/* Test invocation of function only
 	 */
-	libcfile_error_free(
-	 NULL );
-
-	return( 1 );
-}
-
-/* Tests the libcfile_error_fprint function
- * Returns 1 if successful or 0 if not
- */
-int cfile_test_error_fprint(
-     void )
-{
-	/* Test invocation of function only
-	 */
-	libcfile_error_fprint(
-	 NULL,
-	 NULL );
-
-	return( 1 );
-}
-
-/* Tests the libcfile_error_sprint function
- * Returns 1 if successful or 0 if not
- */
-int cfile_test_error_sprint(
-     void )
-{
-	/* Test invocation of function only
-	 */
-	libcfile_error_sprint(
-	 NULL,
-	 NULL,
+	libcfile_notify_set_verbose(
 	 0 );
 
 	return( 1 );
 }
 
-/* Tests the libcfile_error_backtrace_fprint function
+/* Tests the libcfile_notify_set_stream function
  * Returns 1 if successful or 0 if not
  */
-int cfile_test_error_backtrace_fprint(
+int cfile_test_notify_set_stream(
      void )
 {
 	/* Test invocation of function only
 	 */
-	libcfile_error_backtrace_fprint(
+	libcfile_notify_set_stream(
 	 NULL,
 	 NULL );
 
 	return( 1 );
 }
 
-/* Tests the libcfile_error_backtrace_sprint function
+/* Tests the libcfile_notify_stream_open function
  * Returns 1 if successful or 0 if not
  */
-int cfile_test_error_backtrace_sprint(
+int cfile_test_notify_stream_open(
      void )
 {
 	/* Test invocation of function only
 	 */
-	libcfile_error_backtrace_sprint(
+	libcfile_notify_stream_open(
 	 NULL,
-	 NULL,
-	 0 );
+	 NULL );
+
+	return( 1 );
+}
+
+/* Tests the libcfile_notify_stream_close function
+ * Returns 1 if successful or 0 if not
+ */
+int cfile_test_notify_stream_close(
+     void )
+{
+	/* Test invocation of function only
+	 */
+	libcfile_notify_stream_close(
+	 NULL );
 
 	return( 1 );
 }
@@ -122,24 +104,20 @@ int main(
 	CFILE_TEST_UNREFERENCED_PARAMETER( argv )
 
 	CFILE_TEST_RUN(
-	 "libcfile_error_free",
-	 cfile_test_error_free() )
+	 "libcfile_notify_set_verbose",
+	 cfile_test_notify_set_verbose() )
 
 	CFILE_TEST_RUN(
-	 "libcfile_error_fprint",
-	 cfile_test_error_fprint() )
+	 "libcfile_notify_set_stream",
+	 cfile_test_notify_set_stream() )
 
 	CFILE_TEST_RUN(
-	 "libcfile_error_sprint",
-	 cfile_test_error_sprint() )
+	 "libcfile_notify_stream_open",
+	 cfile_test_notify_stream_open() )
 
 	CFILE_TEST_RUN(
-	 "libcfile_error_backtrace_fprint",
-	 cfile_test_error_backtrace_fprint() )
-
-	CFILE_TEST_RUN(
-	 "libcfile_error_backtrace_sprint",
-	 cfile_test_error_backtrace_sprint() )
+	 "libcfile_notify_stream_close",
+	 cfile_test_notify_stream_close() )
 
 	return( EXIT_SUCCESS );
 
