@@ -11,7 +11,7 @@ TEST_PREFIX=`dirname ${PWD}`;
 TEST_PREFIX=`basename ${TEST_PREFIX} | sed 's/^lib\([^-]*\).*$/\1/'`;
 
 TEST_PROFILE="lib${TEST_PREFIX}";
-TEST_FUNCTIONS="get_version error";
+TEST_FUNCTIONS="get_version error notify";
 TEST_FUNCTIONS_WITH_INPUT="seek read";
 OPTION_SETS="";
 
