@@ -22,6 +22,9 @@ Notes:
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
 
+20160827
+* worked on tests
+
 20160409
 * worked on tests
 * added remove file function
